--- a/MvcBlog/MvcBlog.csproj
+++ b/MvcBlog/MvcBlog.csproj
@@ -348,6 +348,7 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Home\KategoriPartial.cshtml" />
     <Content Include="Views\AdminMakale\Index.cshtml" />
+    <Content Include="Views\AdminMakale\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -357,6 +358,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Uploads\MakaleFoto\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
